package structural.decorator.b2_tokenize;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();

}
